# cpp-threadpool

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  script.cmake
cmake/: AddTestExecutable.cmake
docs/: Naming.md  Style.md
include/threadpool/: default_thread_pool.h  job.h  job_group.h  platform_thread_pool.h  pool.h  thread_pool.h  thread_pool_shared.h  threadpool.h
lib/: CMakeLists.txt  default_thread_pool.cc  job.cc  job_group.cc  platform_thread_pool.cc  pool.cc
unittests/: CMakeLists.txt  test_basic.cc  test_job_group.cc  test_platform_thread_pool.cc
